# Local_Memory

./: .gitignore  README.md  memory_check.py  pyproject.toml
infra/: config.example.json  config.json  docker-compose.mem0.yml
src/memory_local/: __init__.py  client.py  config.py  dataclassconfig.py  setup.py
